--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,43 @@
         <link href="/dist/main.css" rel="stylesheet">
     </head>
 
-    <body>
-        <h1 class="text-3xl font-bold underline">
-            Hello world!
-        </h1>
+    <body class="bg-veryDarkBlue">
+        <div class="rounded-3xl w-1/3 h-auto p-8 bg-gradient-to-bl from-gray-700 via-gray-800 to-gray-900">
+            <form class="flex flex-col">
+                <div class="rounded-full w-12 h-12 text-center bg-gray-700 p-4 mb-8">
+                    <img src="./images/icon-star.svg" alt="" class="">
+                </div>
+                <h3 class="font-bold text-white text-3xl mb-6">How did we do?</h3>
+                <p class="font-normal text-mediumGrey text-l mb-6">
+                    Please let us know how we did with your support request. All feedback is appreciated to help us
+                    improve our offering!
+                </p>
+                <div class="flex items-center justify-center mb-6 space-x-4">
+                    <div>
+                        <input type="radio" name="rate" id="">
+                        1
+                    </div>
+                    <div>
+                        <input type="radio" name="rate" id="">
+                        2
+                    </div>
+                    <div>
+                        <input type="radio" name="rate" id="">
+                        3
+                    </div>
+                    <div>
+                        <input type="radio" name="rate" id="">
+                        4
+                    </div>
+                    <div>
+                        <input type="radio" name="rate" id="">
+                        5
+                    </div>
+                </div>
+                <button type="button"
+                    class="px-6 py-2 font-bold text-white rounded-full uppercase bg-orange focus:outline-none hover:text-orange hover:bg-white focus:text-orange focus:bg-white">Submit</button>
+            </form>
+        </div>
     </body>
 
 </html>
