--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,14 @@
                     improve our offering!
                 </p>
                 <div class="flex items-center justify-center mb-6 space-x-4">
+                    <div class="relative rounded-full w-12 h-12 bg-gray-700 p-4 text-mediumGrey font-medium">
+                        <input class="absolute opacity-0 cursor-pointer h-0 w-0 checked:bg-mediumGrey" type="radio"
+                            name="rate" id="rate-1">
+                        <label class="absolute top-0 left-0 text-center w-12 h-12 rounded-full before:content-['1'] hover:text-white
+                            hover:bg-orange" for="rate-1"></label>
+                    </div>
                     <div>
-                        <input type="radio" name="rate" id="">
+                        <input type="radio" name="rate" id="rate-2">
                         1
                     </div>
                     <div>
