--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Frontend Mentor Rating Component Challenge</title>
         <link href="/dist/main.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700&display=swap"
+            rel="stylesheet">
     </head>
 
     <body class="bg-veryDarkBlue">
