--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="js/script.js"></script>
     </body>
 
 </html>
