--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Frontend Mentor Rating Component Challenge</title>
-        <link href="/dist/main.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;500;600;700&display=swap"
             rel="stylesheet">
     </head>
@@ -17,7 +17,7 @@
                 <div id="rating-component">
                     <form id="rating-form" class="flex flex-col">
                         <div class="flex justify-center items-center rounded-full w-12 h-12 bg-gray-700 p-4 mb-8">
-                            <img src="./images/icon-star.svg" alt="" class="">
+                            <img src="images/icon-star.svg" alt="" class="">
                         </div>
                         <h3 class="font-bold text-white text-3xl mb-6">How did we do?</h3>
                         <p class="font-normal text-mediumGrey text-l mb-6">
@@ -73,7 +73,7 @@
                 </div>
                 <div id="thank-you-component" class="hidden">
                     <div class="flex flex-col items-center space-y-6">
-                        <img src="./images/illustration-thank-you.svg" alt="" class="w-48 h-32">
+                        <img src="images/illustration-thank-you.svg" alt="" class="w-48 h-32">
                         <div class="rounded-full text-center bg-gray-700 py-2 text-orange px-4 mb-8">
                             You selected <span id="rating-value"></span> out of 5
                         </div>
