remove main role

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body class="bg-veryDarkBlue">
-        <main role="main" class="flex justify-center items-center h-screen w-screen">
+        <main class="flex justify-center items-center h-screen w-screen">
             <div class="rounded-3xl w-96 h-auto p-8 bg-gradient-to-bl from-gray-700 via-gray-800 to-gray-900">
                 <div id="rating-component">
                     <form id="rating-form" class="flex flex-col">
